# invest-ai

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: daily_report.yml  monthly_report.yml
data/: fund.yaml  grace_fund.yaml  personal_fund.yaml  stock.yaml
openspec/: project.md
openspec/specs/cli/: spec.md
openspec/specs/investment-calculation/: spec.md
openspec/specs/market-data/: spec.md
openspec/specs/reporting/: spec.md
openspec/specs/transaction-processing/: spec.md
poc/: price.py
samples/: china_portfolio.yaml  fund_portfolio.yaml  mixed_portfolio.yaml  realistic_portfolio.yaml  stock_portfolio.yaml
src/invest_ai/: __init__.py
src/invest_ai/calculation/: __init__.py  annual.py  engine.py  fifo.py  history.py  models.py  xirr.py
src/invest_ai/cli/: __init__.py  arguments.py  main.py
src/invest_ai/config/: __init__.py  api_config.py  settings.py
src/invest_ai/market/: __init__.py  fund_client.py  models.py  price_fetcher.py  stock_client.py  trading_days.py
src/invest_ai/models/: __init__.py
src/invest_ai/reporting/: __init__.py  errors.py  reports.py  tables.py  templates.py
src/invest_ai/transaction/: __init__.py  filter.py  loader.py  models.py  validator.py
tests/: TESTING.md  conftest.py
tests/data/: README.md  integration_portfolio.yaml  simple_fund.yaml  simple_stock.yaml
tests/integration/: test_all_user_scenarios.py  test_comprehensive_workflows.py  test_easy_coverage.py  test_full_workflow.py  test_integration.py  test_real_apis.py  test_reporting_coverage.py  test_simple_coverage_boost.py  test_simple_real_scenarios.py
tests/mock_data/: __init__.py  api_responses.py
tests/unit/: test_api_clients_mock.py  test_calculation.py  test_calculation_coverage.py  test_calculation_models.py  test_cli_arguments.py  test_cli_coverage.py  test_config_coverage.py  test_fifo_coverage.py  test_filter_coverage.py  test_loader_coverage.py  test_market_clients.py  test_market_models.py  test_models.py  test_models_coverage.py  test_reporting.py  test_reports_coverage.py  test_trading_days.py  test_transaction.py  test_transaction_models.py  test_validator_coverage.py  test_xirr.py
